--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ version = "0.1.0"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Javis = "78b212ba-a7f9-42d4-b726-60726080707e"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
