--- a/test/Project.toml
+++ b/test/Project.toml
@@ -4,3 +4,4 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
