--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,3 +5,4 @@ GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
